# tonic-example

./: Cargo.toml
.github/workflows/: codacy-analysis.yml  git-leaks.yml  rust.yml
src/: main.rs  server.rs
