[package]
name = "app"
version = "0.1.0"
authors = ["Keisuke Kan <9renpoto+g59@gmail.com>"]
edition = "2021"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = {version = "0.3", features = ["tracing-log"]}

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-cargo-fmt"]

[build-dependencies]
tonic-build = "0.6"
